<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".operatdataviews.AddDataFragment">

    <TextView
        android:id="@+id/latitude_letter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_marginStart="5dp"
        android:textSize="20sp"
        android:text="@string/latitude_letter_note" />

    <TextView
        android:id="@+id/latitude_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/latitude_letter"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:text="0.0000" />

    <TextView
        android:layout_below="@id/latitude_letter"
        android:id="@+id/longitude_letter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="5dp"
        android:textSize="20sp"
        android:text="@string/longitude_letter_note" />

    <TextView
        android:id="@+id/longitude_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/longitude_letter"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:text="0.0000" />

    <TextView
        android:layout_below="@id/longitude_letter"
        android:id="@+id/location_letter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="5dp"
        android:textSize="20sp"
        android:text="@string/location_letter_note" />

    <EditText
        android:id="@+id/location_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:textSize="25sp"
        android:layout_alignTop="@+id/location_letter"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_below="@id/location_value"
        android:id="@+id/line_letter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="5dp"
        android:textSize="20sp"
        android:text="@string/line_letter_note" />

    <EditText
        android:id="@+id/line_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:textSize="25sp"
        android:text="@string/def_line"
        android:layout_alignTop="@+id/line_letter"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:text="@string/cancel_add" />

        <Button
            android:id="@+id/confirm_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:text="@string/confirm_add" />

    </LinearLayout>


</RelativeLayout>